tests/paczka1/fuzzy1/70718964.err
Error in line 9: eozS7khvBwt S125 33,3
Error in line 12: eozS7khvBwt A841 39,6
Error in line 19: eozS7khvBwt S125 26,8
Error in line 26: eozS7khvBwt A841 39,6
Error in line 7: febHbpOv A221 3188,1
